--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title> Пример простой страницы html</title>
+    <title>Пример простой страницы html</title>
 </head>
 
 <body>
-Пример простой страницы - для того, чтобы посмотреть код, нажмите ctrl + U
+Пример простой страницы - для того, чтобы посмотреть код, нажмите ctrl + U<br>
+Продолжение будет здесь.
 </body>
 
 </html>
